--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.2",
+    "axios": "^0.18.0",
     "core-js": "^3.7.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.9",
@@ -18,7 +21,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
     "root": true,
